--- a/index.html
+++ b/index.html
@@ -16,26 +16,29 @@
 </head>
 
 <body>
-  <!-- <section class="body"> -->
+   <section class="body"> 
   <header class="">
     <div class="heading bg-light py-2">
       <div class="container-fluid">
         <div class="row text-center">
-          <div class="col-lg-4 col-md-4 col-12">
+          <div class="col-lg-4 col-md-4 col-6">
             <div class="row items-align-center">
-              <div class="col-6 col-lg-4">
+              <div class="col-6 col-lg-4 d-none d-lg-block">
                 <i class="bi bi-telephone pe-1"></i>9812206545
               </div>
-              <div class="col-6 col-lg-6">
+              <div class="col-6 col-lg-6 d-none d-md-block">
                 <i class="bi bi-envelope pe-1"></i>snach@gmail.com
+              </div>
+              <div class="col-6 col-lg-6  d-block d-md-none">
+                snach@gmail.com
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-12">
+          <div class="col-lg-4 col-md-4 col-12 d-none d-lg-block">
             <p> <span class="text-secondary"> Summer sale discount off</span> <span class="text-danger">50% off!</span>
               Shop Now</p>
           </div>
-          <div class="col-lg-4 col-md-4 col-12 text-end">
+          <div class="col-lg-4 col-md-4 col-6 text-end">
             <div class="dropdown">
               <button class="btn dropdown-toggle usd ps-3 border-0" type="button" id="dropdownMenuButton1"
                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -89,7 +92,7 @@
     </div>
   </header>
 
-  <section class="sliders" data-aos="fade-down" data-aos-delay="1000">
+ <!-- <section class="sliders" data-aos="fade-down" data-aos-delay="1000">
     <div class="container-fluid">
       <div class="slider">
         <div class="slider-img">
@@ -128,7 +131,62 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <section class="sliderss">
+    <div class="container-fluid">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="100">
+            <img src="pic/slider111.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block d-md-block text-start">
+              <h3 class="text-uppercase " data-aos="fade-down" data-aos-delay="2000" data-aos-duration="1000">new season
+              </h3>
+              <h1 class="fs-1" data-aos="zoom-in-right" data-aos-delay="2000" data-aos-duration="1000">LookBook Collection
+              </h1>
+              <a href="" class="btn btn-dark rounded-0 fs-3" data-aos="flip-left" data-aos-delay="2000"
+                data-aos-duration="1000">Explore Now</a>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="pic/slidertop2.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block d-md-block text-end">
+              <h3 class="text-uppercase " data-aos="fade-down" data-aos-delay="2000" data-aos-duration="1000">new season
+              </h3>
+              <h1 class="fs-1" data-aos="zoom-in-right" data-aos-delay="2000" data-aos-duration="1000">LookBook Collection
+              </h1>
+              <a href="" class="btn btn-dark rounded-0 fs-3" data-aos="flip-left" data-aos-delay="2000"
+                data-aos-duration="1000">Explore Now</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="pic/slidertop3.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block d-md-block text-start">
+              <h3 class="text-uppercase " data-aos="fade-down" data-aos-delay="2000" data-aos-duration="1000">new season
+              </h3>
+              <h1 class="fs-1" data-aos="zoom-in-right" data-aos-delay="2000" data-aos-duration="1000">LookBook Collection
+              </h1>
+              <a href="" class="btn btn-dark rounded-0 fs-3" data-aos="flip-left" data-aos-delay="2000"
+                data-aos-duration="1000">Explore Now</a>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+</div>
+</section>
 
   <section class="bainner pb-5">
     <div class="container-fluid">
@@ -139,7 +197,7 @@
             <a href="" class="btn rounded-0">Women</a>
           </div>
         </div>
-        <div class="col-lg-3 my-sm-4 my-lg-0  gap">
+        <div class="col-lg-3 py-4 py-lg-0  gap">
           <div class="row">
             <div class="col-lg-12 mb-4">
               <div class="bainner-img shadow" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="3000">
@@ -830,7 +888,7 @@
       <div class="col-lg-2 pt-3">
         <div class="catogory">
           <h3>Categories</h3>
-          <ul>
+          <ul >
             <li><a href="">Women</a></li>
             <li><a href="">Denim</a></li>
             <li><a href=""> Shose </a></li>
@@ -883,20 +941,22 @@
       <div class="container-fluid d-flex justify-content-between">
        <div class="left"> <a href="" class="text-light fs-5">Copyright 2022 <span class="text-warning">Kalles</span>  all rights reserved. Powered by The4</a></div>
        <div class="right">
-        <a href="">Shop</a>
-        <a href="">About Us</a>
-        <a href="">Contact</a>
-        <a href="">Blog</a>
+        <ul>
+          <li><a href="">Shop</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
+        </ul>
        </div>
       </div>
     </div>
   </footer>
-<!-- </section> -->
+  </section>
 
-  <!-- <div class="loader">
+   <div class="loader">
     <div class="lds-heart">
         <div></div>
-    </div> -->
+    </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
